# SFT-data-Forge

./: .env.template  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  dashboard.py  pyproject.toml  requirements.txt
.claude/: settings.json
.streamlit/: config.toml
agents/pipelines/: distribution_metadata_generation_pipeline.py  mapping_schema_pipeline.py  source_schema_pipeline.py
agents/states/: dataset_metadata_state.py  mapping_schema_state.py  src_schema_state.py
config/: gemini2.0-flash.yml  lang_options.json  lang_stopwords.json  new_schema_pool.json  postgres-insert-DDL.sql  prompts.yml  state_vars.py  table_dependencies.md  task-skill.txt
config/postgres_DDL/: history_tables.sql  lineage.sql  recipe_lineage.sql  system_prompt_lineage.sql  tables.sql  triggers.sql  vocabularies.sql
db/abstracts/: RelationalDBManager.py
docker/dev/: .env.dev.template  docker-compose-2.yml  docker-compose.yml
docker/prod/: docker-compose.yml  nginx_conf.sh
docs/: langgraph-llms-full.txt
docs/json_mapper_example/: simple_mapping.py
docs/langgraph_examples/: break.py  interrupt.py  loop.py
mappings/: mapper.py  transform_functions.py  udf.py
sft_data_forge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ui/[pending]dataset_comparator/: comparator.py  comparator_distribution_selection_handler.py  description.md  (+3 more)
utils/: GeminiErrorHandler.py  OneSampleJsonExtraction.py  OneSampleParquetExtraction.py  extract_glob.py  fs_func.py  min_hash_signature.py  path_utils.py  sample_reader.py  serializer.py  streamlit_func.py  worker_safety.py
(+209 files in other folders)
