[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sft-data-forge"
version = "0.1.0"
description = "SFT Data Forge pipelines"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["datatrove_pipelines*","mappings*","db*","data_class*"]
